@@ -38,7 +38,6 @@ public class SubjectAreaCell extends DefaultGraphCell implements ModelCell<Subje
         GraphConstants.setEditable(getAttributes(), true);
         GraphConstants.setInset(getAttributes(), 20);
         GraphConstants.setGroupOpaque(getAttributes(), true);
-        GraphConstants.setEditable(getAttributes(), false);
     }
 
     @Override
